--- a/package.json
+++ b/package.json
@@ -1,37 +1,48 @@
 {
-  "name": "angular-ui-component-seed",
-  "version": "0.1.1",
-  "description": "Seed for reusable Angular UI components.",
-  "main": "component.js",
-  "scripts": {
-    "test": "./node_modules/karma/bin/karma start --browsers Firefox --single-run"
+  "name": "angular-multi-select-tree",
+  "version": "0.1.0",
+  "description": "A hierarchical (or tree) selection control for AngularJS",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
   },
-  "author": {
-    "name": "Muhammed Ashik"
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/a5hik/angular-ui-component-seed"
+    "url": "https://github.com/a5hik/angular-multi-select-tree"
   },
+  "keywords": [
+    "tree",
+    "control",
+    "hierarchical",
+    "hierarchy",
+    "selection",
+    "angualr",
+    "angularjs"
+  ],
+  "author": "Muhammed Ashik",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/a5hik/angular-multi-select-tree/issues"
+  },
+  "homepage": "https://github.com/a5hik/angular-multi-select-tree",
   "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-concat": "~0.3.x",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-uglify": "~0.2.x",
-    "grunt-contrib-jshint": "~0.4.x",
-    "grunt-contrib-cssmin": "~0.7.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-connect": "~0.5.0",
-    "grunt-angular-templates": "~0.5.7",
-    "grunt-open": "~0.2.3",
-    "grunt-karma": "~0.7.x",
-    "karma-jasmine": "~0.2.2",
-    "karma-chrome-launcher": "~0.1",
-    "grunt-conventional-changelog": "~1.0.x",
-    "grunt-ngmin": "~0.0.3",
-    "load-grunt-tasks": "~0.2.0",
-    "lodash": "~2.4.x"
+    "del": "^1.0.0",
+    "gulp": "^3.8.10",
+    "gulp-angular-templatecache": "^1.4.2",
+    "gulp-bump": "^0.1.11",
+    "gulp-concat": "^2.4.2",
+    "gulp-jshint": "^1.9.0",
+    "gulp-less": "^1.3.6",
+    "gulp-minify-css": "^0.3.11",
+    "gulp-rename": "^1.2.0",
+    "gulp-uglify": "^1.0.2",
+    "jasmine-core": "^2.1.3",
+    "karma": "^0.12.28",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-jasmine": "^0.3.2",
+    "karma-phantomjs-launcher": "^0.1.4"
   }
 }
